# SQL_Agent

./: .env  .gitignore  README.md  api_openapi.json  baby.py  cinema.py  cli.py  cli_merchant.py  demo.py  deploy.py  fast_api_demo.py  forecast.py  lama.py  main.py  merchant.py  pyproject.toml  requirements.txt  test.py  testmemory.py  vercel.json
